k8s/chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
     labels:
       app: chat
    spec:
      containers:
        - image: chat:0.1
          imagePullPolicy: Never
          name: chat
          ports:
            - containerPort: 8080
