k8s/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: chat
