k8s/chat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/chat
            pathType: "Prefix"
            backend:
              service:
                name: chat-service
                port:
                  number: 80
